# organize

./: .config.yaml  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  TODO.md  cli.yaml  cli.yml  config.json  config.schema.json  config.yaml  config.yml  example_config.yaml  run.sh  rustfmt.toml  stop.sh
.github/workflows/: rust.yml
example/: config.yaml
examples/: config.yml  example_config.yml  new_config_prototype.yml  old_config.yml
src/: cli.rs  cli.yml  config.rs  daemon.rs  file.rs  lib.rs  lock_file.rs  main.rs  mod.rs  notifier.rs  path.rs  utils.rs
src/commands/: config.rs  mod.rs  run.rs  stop.rs
src/commands/watch/: daemon.rs  mod.rs
src/config/: config.xml  filters.rs  mod.rs  rules.rs
src/config/actions/: file.rs  mod.rs  utils.rs
src/config/diagrams/: config.xml
src/configuration/: actions.rs  conflicts.rs  filters.rs  folders.rs  mod.rs  options.rs  rules.rs
src/configuration/filters/: filename.rs  mod.rs  temporary.rs
src/configuration/temporary/: actions.rs  conflicts.rs  folders.rs  mod.rs  options.rs  rules.rs
src/file/: lib.rs  mod.rs  utils.rs
src/global_defaults/: lib.rs  mod.rs
src/lock_file/: lib.rs  mod.rs
src/path/: lib.rs  mod.rs
src/string/: lib.rs  mod.rs
src/subcommands/: config.rs  edit.rs  logs.rs  mod.rs  run.rs  stop.rs  watch.rs
src/subcommands/config/: mod.rs  utils.rs
src/subcommands/run/: mod.rs
src/subcommands/watch/: daemon.rs  mod.rs
src/user_config/: mod.rs  user_config.rs
src/user_config/rules/: actions.rs  deserialize.rs  filters.rs  folder.rs  mod.rs  rule.rs
src/user_config/rules/actions/: copy.rs  delete.rs  echo.rs  file_action.rs  lib.rs  mod.rs  (+6 more)
src/utils/: lib.rs  mod.rs
tests/: reset_files.sh  test_log2.txt
