[package]
name = "organize"
version = "0.2.0"
authors = ["KBR9 <cabero96@protonmail.com>"]
edition = "2018"
description = "File automation for the power user"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.12"
crossbeam-channel = "0.4.0"
regex = "1"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4.4"
dirs = "3.0"
serde_yaml = "0.8"
chrono = "0.4"
colored = "2"
sysinfo = "0.15.3"
dialoguer = "0.6.2"