[package]
name = "organize"
version = "0.2.0"
authors = ["KBR9 <cabero96@protonmail.com>"]
edition = "2018"
description = "File automation for the power user"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
crossbeam-channel = "0.5.0"
regex = "1.4.1"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = { version = "1.0.117", features = ["derive"] }
yaml-rust = "0.4.4"
dirs = "3.0.1"
serde_yaml = "0.8.13"
chrono = "0.4.19"
colored = "2.0.0"
sysinfo = "0.15.3"
dialoguer = "0.7.1"
lazy_static = "1.4.0"
